--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "Cesar Brandon",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15"
+    "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
