--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API to register and query students",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/app.ts"
+    "dev": "nodemon ./src/app.ts",
+		"build": "tsc",
+		"start": "node ./dist/app.js"
   },
   "author": "Cesar Brandon",
   "license": "ISC",
