--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/app.ts",
-		"build": "tsc",
-		"start": "node ./dist/app.js"
+    "build": "tsc",
+    "start": "node ./dist/app.js"
   },
   "author": "Cesar Brandon",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.1"
+    "@types/jsonwebtoken": "^9.0.1",
+    "typescript": "^4.9.4"
   }
 }
